Update the client app

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/1.8.17/jquery-ui.min.js"></script>
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="jquery/jquery.atmosphere_0.9.js"></script>
+<script type="text/javascript" src="jquery/jquery.atmosphere.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 
 <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.8.16/themes/smoothness/jquery-ui.css">
