--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="span6 offset3">
-				<h2>MapPush <small>An <a href="https://github.com/Atmosphere/atmosphere" target="_blank">Atmosphere</a> framework implementation sample</small></h2>
+				<h2>MapPush <small>An <a href="https://github.com/Atmosphere/atmosphere" target="_blank">Atmosphere</a> framework sample</small></h2>
 			</div>
 		</div>
 		<div class="row">
